source/formulaforce/main/objects/Race__c/fields/Data_Cloud_Id_Int__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Id_Int__c</fullName>
    <description>Number representation of a Data Cloud Id. Used for selecting data from a corresponding DMO in Data Cloud</description>
    <formula>VALUE( Data_Cloud_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Cloud Id (Int)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>