source/formulaforce/main/objects/Race__c/fields/FastestLapBy__c.field-meta.xml
<CustomField>
    <fullName>FastestLapBy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>deprecated - DO NOT USE</description>
    <label>Fastest Lap By (deprecated)</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Fastest Laps</relationshipLabel>
    <relationshipName>FastestLapByDriver</relationshipName>
    <type>Lookup</type>
</CustomField>