source/formulaforce/main/objects/Race__c/fields/Free_Practice_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Practice_1_Date__c</fullName>
    <label>Free Practice 1 Date</label>
    <type>Date</type>
</CustomField>