source/formulaforce/main/objects/Race__c/fields/Free_Practice_2_Time__c.field-meta.xml
<CustomField>
    <fullName>Free_Practice_2_Time__c</fullName>
    <label>Free Practice 2 Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>