source/formulaforce/main/objects/Race__c/fields/Free_Practice_3_Time__c.field-meta.xml
<CustomField>
    <fullName>Free_Practice_3_Time__c</fullName>
    <label>Free Practice 3 Time</label>
    <type>Time</type>
</CustomField>