source/formulaforce/main/objects/Race__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>deprecated - DO NOT USE</description>
    <label>Location (deprecated)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>