source/formulaforce/main/objects/Race__c/fields/PolePositionLapTime__c.field-meta.xml
<CustomField>
    <fullName>PolePositionLapTime__c</fullName>
    <label>Pole Position Lap Time (deprecated)</label>
    <summarizedField>Contestant__c.Qualification1LapTime__c</summarizedField>
    <summaryForeignKey>Contestant__c.Race__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>