source/formulaforce/main/objects/Race__c/fields/Qualifying_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Date__c</fullName>
    <label>Qualifying Date</label>
    <type>Date</type>
</CustomField>