source/formulaforce/main/objects/Race__c/fields/Qualifying_Time__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Time__c</fullName>
    <label>Qualifying Time</label>
    <type>Time</type>
</CustomField>