source/formulaforce/main/objects/Race__c/fields/Race_Date__c.field-meta.xml
<CustomField>
    <fullName>Race_Date__c</fullName>
    <label>Race Date</label>
    <type>Date</type>
</CustomField>