source/formulaforce/main/objects/Race__c/fields/Race_Summary__c.field-meta.xml
<CustomField>
    <fullName>Race_Summary__c</fullName>
    <description>A field to hold an AI generated summary of the Race</description>
    <inlineHelpText>A field to hold an AI generated summary of the Race</inlineHelpText>
    <label>Race Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>