source/formulaforce/main/objects/Race__c/fields/Race_Time__c.field-meta.xml
<CustomField>
    <fullName>Race_Time__c</fullName>
    <label>Race Time</label>
    <type>Time</type>
</CustomField>