source/formulaforce/main/objects/Race__c/fields/Race_URL__c.field-meta.xml
<CustomField>
    <fullName>Race_URL__c</fullName>
    <label>Race URL</label>
    <type>Url</type>
</CustomField>