source/formulaforce/main/objects/Race__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <label>Round</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>