source/formulaforce/main/objects/Race__c/fields/Sprint_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Date__c</fullName>
    <label>Sprint Date</label>
    <type>Date</type>
</CustomField>