source/formulaforce/main/objects/Race__c/fields/Sprint_Time__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Time__c</fullName>
    <label>Sprint Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>