source/formulaforce/main/objects/Race__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>deprecated - DO NOT USE</description>
    <label>Start Date (deprecated)</label>
    <type>Date</type>
</CustomField>