source/formulaforce/main/objects/Race__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status (deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Red Flagged</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>