source/formulaforce/main/objects/Race__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>deprecated - DO NOT USE</description>
    <formula>Season__r.Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year (deprecated)</label>
    <type>Text</type>
</CustomField>