source/formulaforce/main/objects/Race__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Season__c</columns>
    <columns>Round__c</columns>
    <columns>NAME</columns>
    <columns>Circuit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>